--- a/src/common/SideBar.css
+++ b/src/common/SideBar.css
@@ -1,3 +1,8 @@
 .css-cveggr-MuiListItemIcon-root{
     min-width: 40px !important;
 }
+
+.css-10hburv-MuiTypography-root {
+
+    font-size: 15px !important;
+}
