se agrega componente museos y corrección de error y ajustes visuales

--- a/src/common/Navbar.css
+++ b/src/common/Navbar.css
@@ -27,3 +27,18 @@
 .css-ancrnh-MuiButtonBase-root-MuiIconButton-root{
   background-color: rgba(196, 191, 191, 0.603) !important;
 }
+
+.logoMuni2 {
+  height: 50px; 
+}
+
+
+.logOut {
+  color: rgb(255, 255, 255); 
+}
+
+body {
+  margin: 0;
+  font-family: Arial, sans-serif;
+  background-color: #f0f0f0;
+}
