--- a/src/index.css
+++ b/src/index.css
@@ -19,7 +19,7 @@
 
 body {
   font-family: "Poppins", sans-serif;
-  /* background: linear-gradient(45deg, #141f27, #1b384a); */
+  padding: 0;
 }
 .css-yfo96e {
   padding: 0 !important;
