--- a/src/common/Footer.css
+++ b/src/common/Footer.css
@@ -1,99 +1,130 @@
 .footerCont {
-    left: 0px;
-    bottom: 0;
-    width: 100%;
-    height: 100%;
-    display: flex;
-    background-color: #1F89F6;
-    /* background-color: #0066ff; */
-    border-top: solid 1px;
-    justify-content: center;
-    margin-top: 20px !important;
-    font-family: 13px;
-    color: #fff;
-  
-    align-self: flex-end !important;
-    min-width: 310px;
-  
+  left: 0;
+  bottom: 0;
+  width: 100%;
+  height: 100px;
+  display: flex;
+  background-color: #1F89F6;
+  border-top: solid 1px #fff;
+  justify-content: center;
+  margin-top: 20px !important;
+  font-family: Arial, sans-serif;
+  font-size: 13px;
+  color: #fff;
+  box-shadow: 0px -4px 6px rgba(0, 0, 0, 0.2);
+  z-index: 9999;
+}
+
+.pingo {
+  display: flex;
+  justify-content: space-between;
+  width: 100% !important;
+  columns: 2;
+  padding-left: 0px !important;
+  padding-right: 0px !important;
+}
+
+.iconosRedes {
+  display: flex;
+  font-size: 20px;
+  align-self: center;
+  justify-content: center;
+}
+
+.iconosRedes i {
+  color: #fff;
+}
+
+.logoFooter {
+  display: flex;
+  flex-direction: row;
+  align-items: flex-start;
+  justify-content: flex-start;
+  align-items: center;
+}
+
+.logoFooter img {
+  width: 150px;
+}
+
+.logoRedesFooter {
+  height: 20px;
+  margin-top: -1px !important;
+}
+
+.seguinos {
+  margin-left: 50px !important;
+  display: flex;
+  justify-content: flex-end;
+  color: #fff;
+  align-items: center !important;
+  width: auto !important;
+}
+
+.seguinos h5 {
+  font-size: 17px;
+  display: block;
+}
+
+.parrafo {
+  color: #fff;
+}
+
+@media (max-width: 770px) {
+  .seguinos {
+    /* margin-right: 0 !important; */
+    justify-content: center !important;
   }
-  
+}
+
+@media (max-width: 767px) {
+  .seguinos {
+    margin-top: -52px !important;
+    /* margin-left: 200px !important ; */
+    justify-content: flex-end !important;
+    display: flex;
+  }
+
+  .seguinos h5 {
+    font-size: 15px;
+  }
+
+  .iconosRedes i {
+    font-size: 15px;
+  }
+
+  .pingo {
+    display: flex;
+    right: 0 !important;
+    justify-content: flex-end;
+  }
+}
+
+@media (max-width: 510px) {
+  .seguinos h5 {
+    display: none !important;
+  }
+}
+
+@media (max-width: 430px) {
   .iconosRedes {
     display: flex;
-    font-size: 20px;
+    font-size: 5px !important;
     align-self: center;
     justify-content: center;
   }
-  
-  .iconosRedes i {
-    color: #fff;
+}
+
+@media (max-width: 390px) {
+  .logoFooter h4 {
+    font-size: 100% !important;
   }
-  
+
   .logoFooter {
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-    justify-content: center;
-  }
-  
-  .logoFooter img {
-  
-    width: 59%;
-    
-  
-  }
-  
-  .logoRedesFooter {
-    height: 20px;
-    margin-top: -5px !important;
-  }
-  
-  .seguinos {
-    margin-left: 50px !important;
-    display: flex;
-    justify-content: end;
-    color: #fff;
-    align-items: center !important;
-  
-  }
-  
-  .parrafo {
-
-    color: #fff;
-
+    width: 100% !important;
   }
 
- 
-  @media (max-width: 770px) {
-    .seguinos {
-      margin-right: 0 !important;
-      justify-content: center !important;
-    }
+  .logoFooter h1 {
+    font-size: 30px !important;
   }
-  
-  @media (max-width: 430px) {
-    .seguinos h5 {
-      margin-right: 0 !important;
-      justify-content: center !important;
-      font-size: 18px !important;
-    }
-  }
-  
-  @media (max-width: 390px) {
-    .seguinos h5 {
-      margin-right: 0 !important;
-      justify-content: center !important;
-      font-size: 13px !important;
-    }
-  
-    .logoFooter h4 {
-      font-size: 100% !important;
-    }
-  
-    .logoFooter {
-      width: 100% !important;
-    }
-  
-    .logoFooter h1 {
-      font-size: 30px !important;
-    }
-  }
+}
