--- a/src/components/LoaderMuni/LoaderMuni.css
+++ b/src/components/LoaderMuni/LoaderMuni.css
@@ -10,7 +10,7 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    background-color: rgb(128, 128, 128, .2);
+    background-color: rgba(128, 128, 128, 0.301);
 }
 
 @keyframes skeleton-loading {
