--- a/src/components/TipoEstatua/TipoEstatua.css
+++ b/src/components/TipoEstatua/TipoEstatua.css
@@ -2,7 +2,9 @@
   display: flex;
   gap: 20px;
   justify-content: center;
-  margin-top: 325px;
+  margin-top: 20dvh;
   flex-wrap: wrap;
-  margin-bottom: 256px;
+  margin-bottom:10dvh;
+  margin-right: 20px;
+  margin-left: 20px;
 }
