--- a/src/components/PatrimonioDetail/PatrimonioDetails.css
+++ b/src/components/PatrimonioDetail/PatrimonioDetails.css
@@ -4,6 +4,7 @@
   display: flex;
   flex-direction: column;
   align-items: center;
+  margin-bottom: 60px;
 }
 
 .patrimonio-title {
@@ -104,6 +105,19 @@
   width: 100%;
   height: 10vh;
   object-fit: contain;
+}
+
+.image-gallery-content .image-gallery-slide .image-gallery-image {
+  max-height: 650px !important;
+}
+
+.image-gallery-fullscreen-button {
+  right: 16px !important;
+  /* left: 30px; */
+}
+
+.image-gallery-play-button {
+  left: 10px !important;
 }
 
 .patrimonio-descripcion {
