--- a/src/common/Navbar.css
+++ b/src/common/Navbar.css
@@ -42,3 +42,7 @@ body {
   font-family: Arial, sans-serif;
   background-color: #f0f0f0;
 }
+
+.css-jziuck {
+  background-color: rgb(0 0 0 / 23%) !important;
+}
